--- a/angular/angular_10.html
+++ b/angular/angular_10.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="test">
+<html lang="en" ng-app="test_ajax">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>依赖注入</title>
+    <title>angular异步</title>
 </head>
 <body ng-controller="main">
+    <ul>
+        <li ng-repeat="item in arr "> {{item}}</li>
+    </ul>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script>
     <script>
-        let mod = angular.module('test',[]);
+        let mod = angular.module('test_ajax',[]);
         // 函数的定义
         mod.controller('main',function($scope,$http){
-            alert(arguments.length);
+            $http.get('att.txt').then((res)=>{
+                console.log(res);
+            },(err)=>{
+                console.log('出错了');
+            });
         });
     </script>
 </body>
